# zjh

./: Cargo.toml  README.md  configuration.yaml
configuration/: base.yaml  production.yaml
migrations/: 20250625083858_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subs.rs  subs_email.rs  subs_name.rs
src/routes/: hc.rs  mod.rs  subs.rs
tests/: hc.rs
