[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[build-dependencies]
syn = "1"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
claim = "0.5.0"
config = "0.11"
env_logger = "0.11.8"
fake = "4.3.0"
log = "0.4.27"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = "0.12.20"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
unicode-segmentation = "1.12.0"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
once_cell = "1"
